--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": " node server.js"
-  
+    "start": " node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +17,7 @@
     "express-fileupload": "^1.4.0",
     "mongoose": "^7.3.1",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^2.0.22"
   }
 }
