--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
-
-
 {
-  "version": 2,
-  "name": "native-server",
-  "builds": [{ "src": "server.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/server.js" }]
+   "version": 2,
+  "builds": [{"src": "./index.js","use": "@vercel/node"}],
+  "routes":[{"src":"/(.*)" , "dest":"index.js"}]
 }
